Fix sonar/checkstyle errors